# scl-utility

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: close-mirror-prs.yml  docs.yml  lint.yml  publish-doxygen-xml.yml
doc/en/: Main.md
doc/en/attribute/: assume.md  deprecated.md  fallthrough.md  hotcold.md  indeterminate.md  inline.md  lifetimebound.md  likely.md  maybe_unused.md  no_unique_address.md  nodiscard.md  noreturn.md  unsequenced.md
doc/en/hash/: key.md
doc/en/hierarchy/: algorithm.md  node.md  tree.md
doc/en/meta/: enum_name.md  symbol_name.md  type_name.md
doc/en/preprocessor/: counter.md  expand_macros.md  forward.md
doc/en/runtime/: enum_value.md  type_name.md
doc/en/type_traits/: detection.md  forward_like.md  member_like.md  overload_cast.md
doc/ru/: Main.md
doc/ru/attribute/: assume.md  deprecated.md  fallthrough.md  hotcold.md  indeterminate.md  inline.md  lifetimebound.md  likely.md  maybe_unused.md  no_unique_address.md  nodiscard.md  noreturn.md  unsequenced.md
doc/ru/hash/: key.md
doc/ru/hierarchy/: algorithm.md  node.md  tree.md
doc/ru/meta/: enum_name.md  symbol_name.md  type_name.md
doc/ru/preprocessor/: counter.md  expand_macros.md  forward.md
doc/ru/runtime/: enum_value.md  type_name.md
doc/ru/type_traits/: detection.md  forward_like.md  member_like.md  overload_cast.md
example/hash/: key_nttp.cpp
example/hierarchy/: node_example.cpp  tree_example.cpp
example/runtime_enum/: enum_value.cpp
example/runtime_type/: type_name.cpp
include/ScL/: Utility.h
include/ScL/Utility/: MemberSignature.h  Qualifier.h  SimilarMethod.h  SimilarRefer.h  SingleArgument.h  TypeOf.h  ValueOf.h
project/cmake/: CMakeLists.txt  package-config.cmake.in
project/cmake/example/: CMakeLists.txt
project/cmake/test/: CMakeLists.txt
project/doxygen/: Doxyfile
project/qmake/: scl-utility.prf  scl-utility.pro
project/qmake/example/: scl-utility.pro
script/ci/: deploy_versioned_docs.sh  mirror_github.sh  mirror_github_manual.sh
script/doxygen/: build.sh
src/: .clang-tidy  MemberSignature.h  Qualifier.h  SimilarMethod.h  SimilarRefer.h  SingleArgument.h  TypeOf.h  ValueOf.h
src/scl/: utility.h
src/scl/utility/: attribute.h  concepts.h  hash.h  hierarchy.h  meta.h  preprocessor.h  runtime.h  type_traits.h
src/scl/utility/attribute/: assume.h  deprecated.h  fallthrough.h  hotcold.h  indeterminate.h  inline.h  lifetimebound.h  likely.h  maybe_unused.h  no_unique_address.h  nodiscard.h  noreturn.h  unsequenced.h
src/scl/utility/concepts/: qualifier.h  reference.h  type_category.h  type_property.h
src/scl/utility/hash/: djb2.h  fnv1a.h  jenkins_ota.h  key.h  sdbm.h  siphash.h
src/scl/utility/hierarchy/: algorithm.h  node.h  node.hpp  tree.h
src/scl/utility/meta/: enum.h  symbol.h  type.h
src/scl/utility/preprocessor/: counter.h  expand_macros.h  forward.h
src/scl/utility/runtime/: enum.h  type.h
src/scl/utility/type_traits/: detection.h  forward_like.h  member_like.h  overload_cast.h
src/scl/utility/type_traits/detection/: function.h  method.h  operator.h
test/: gtest_utils.h
test/attribute/: attribute_gtest.cpp
test/concepts/: qualifier_gtest.cpp  reference_gtest.cpp  type_category_gtest.cpp  type_property_gtest.cpp
test/hash/: djb2_gtest.cpp  fnv1a_gtest.cpp  jenkins_ota_gtest.cpp  key_gtest.cpp  sdbm_gtest.cpp  siphash_gtest.cpp
test/hierarchy/: algorithm_gtest.cpp  node_gtest.cpp  tree_gtest.cpp
test/meta/: enum_name_gtest.cpp  symbol_name_gtest.cpp  type_name_gtest.cpp
test/preprocesor/: counter_gtest.cpp  expand_macros_gtest.cpp  forward_gtest.cpp
test/runtime/: enum_fallback_gtest.cpp  enum_gtest.cpp  type_gtest.cpp
test/type_traits/: detection_function_gtest.cpp  detection_gtest.cpp  detection_method_gtest.cpp  detection_operator_gtest.cpp  forward_like_gtest.cpp  member_like_gtest.cpp  overload_cast_gtest.cpp
